# jitterator

./: README.md  pyproject.toml  requirements.txt
src/jitterator/: __init__.py  jitterator.py
